<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_agree"
        android:title="@string/btn_positive"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_day_night_no"
        android:orderInCategory="100"
        android:title="@string/action_day_night_no"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_day_night_yes"
        android:orderInCategory="100"
        android:title="@string/action_day_night_yes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bottom_sheet_dialog"
        android:orderInCategory="100"
        android:title="@string/action_bottom_sheet_dialog"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_accept_eula"
        android:orderInCategory="100"
        android:title="@string/action_accept_eula"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_decline_eula"
        android:orderInCategory="100"
        android:title="@string/action_decline_eula"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_read_eula_status"
        android:orderInCategory="100"
        android:title="@string/action_read_prefs"
        app:showAsAction="never"/>
</menu>
